# CFS-Remake

./: CMakeLists.txt  README.md
example/: execute.cpp
script/: gen_header.sh
src/: main.cpp
src/backtracer/: generalCFSbaseError.cpp  general_cfs_error.cpp
src/cfs/: CowFileSystem.cpp  cfsBasicComponents.cpp  commandTemplateTree.cpp  inode.cpp  mmap.cpp  smart_block_t.cpp
src/imgInTerm/: CImg.h  CMakeLists.txt  libtiv.cpp
src/imgInTerm/libpng/: CMakeLists.txt  example.c  pngpriv.h  pngstruct.h  pngtest.c
src/imgInTerm/libpng/contrib/gregbook/: readpng.c  readpng2.c  writepng.c
src/imgInTerm/libpng/contrib/libtests/: fakepng.c  makepng.c  pngvalid.c
src/imgInTerm/libpng/contrib/tools/: checksum-icc.c  png-fix-itxt.c  pngcp.c  pngfix.c
src/imgInTerm/libpng/contrib/visupng/: PngFile.c  VisualPng.c
src/imgInTerm/libpng/scripts/: pnglibconf.dfa  pnglibconf.h.prebuilt
src/include/: CowFileSystem.h  args.h  cfs.h  cfsBasicComponents.h  colors.h  commandTemplateTree.h  execute.h  generalCFSbaseError.h  general_cfs_error.h  inode.h  logger.h  mmap.h  routes.h  smart_block_t.h  utils.h
src/misc/: args.cpp  color.cpp  execute.cpp  logger.cpp  utils.cpp
src/res/: cfs.command.readline  version.txt
src/tests/: attributes.cpp  bitmap.cpp  blocks.cpp  cfs_block_manager.cpp  cfs_comp_bitmaps.cpp  inode.cpp  journal.cpp  show.cpp  test.cpp
